...
                            } label: {
                                Image(systemName: "plus")
                            }
                            .imageStyle()
                            .accessibilityLabel("Add a new profile")
                            .accessibilityHint("Create a short cut to the exact colourblindness of someone you know.")
                            .accessibilityIdentifier("add new profile")

                            Spacer()

                            Button {
                                loadImage = true
                            } label: {
                                Image(systemName: "photo.on.rectangle.angled")
                            }
                            .imageStyle()
                            .accessibilityLabel("Open photo album")
                            .accessibilityHint("See your photos in colourblind mode!")
                            .accessibilityIdentifier("select image")
                        }
//                        .padding()
                        .fixedSize(horizontal: false, vertical: true)

                        Spacer()
                    }
...
