...
                    Button {
                        onDismiss()
                        presentationMode.wrappedValue.dismiss()
                    } label: {
                        Image(systemName: "xmark.circle")
                    }
                    .accessibilityIdentifier("dismiss")
                    .imageStyle()
                    .accessibilityLabel("Close")
                }
                .padding(.top, 8)
                .padding(.horizontal, 20)

...
